--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "private": true,
   "scripts": {
     "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
+    "build": "true",
     "lint": "ionic-app-scripts lint",
     "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
+    "ionic:serve": "ionic-app-scripts serve",
+    "build:local": "ionic-app-scripts build"
   },
   "dependencies": {
     "@angular/animations": "5.2.9",
@@ -32,7 +33,7 @@
     "zone.js": "0.8.20"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.8",
+    "@ionic/app-scripts": "^3.1.8",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project"
